# rustic_boids

./: README.md
libs/simulation/: Cargo.toml
libs/simulation-wasm/: Cargo.toml
libs/simulation-wasm/src/: boid.rs  lib.rs  world.rs
libs/simulation/src/: boid.rs  boundary_condition.rs  config.rs  lib.rs  world.rs
www/: index.css  index.html  index.js  package-lock.json  package.json
www/app/: viewport.js
