[package]
name = "lib-simulation-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
rand = "0.8.5"
wasm-bindgen = "0.2.89"
getrandom = { version = "0.2.11", features = ["js"] }
serde = { version = "1.0.193", features = ["derive"] }
serde-wasm-bindgen = "0.6.3"

lib-simulation = { path = "../simulation" }
